--- a/docs/use-the-network/console/adding-devices.mdx
+++ b/docs/use-the-network/console/adding-devices.mdx
@@ -39,7 +39,7 @@ US Channels used by the Helium Network \(which will always be `sub-band 2`\).
 ### Is The Helium Network a Public or Private LoRaWAN?
 
 The Helium Network is a Public LoRaWAN Network. You can read more about the
-unique, blockchain-driven architecture here.
+unique, blockchain-driven architecture [here](/blockchain).
 
 ### Delay After Adding Device
 
