--- a/docs/use-the-network/console/adr.mdx
+++ b/docs/use-the-network/console/adr.mdx
@@ -60,4 +60,4 @@ ADR tab.
 
 Here you can toggle the Allow ADR setting and apply the changes to the Label
 settings. Last, if you don't already have the Label attached to your device or
-devices then you will need to do that before these setting are applied.
+devices then you will need to do that before these settings are applied.
