--- a/docs/use-the-network/console/data-credits.mdx
+++ b/docs/use-the-network/console/data-credits.mdx
@@ -43,8 +43,8 @@ The transaction is as follows:
 You may have noticed that the final step includes a promise from the Helium
 LoRaWAN Network Server. The principle at work here is that each packet in its
 own is quite insignificant in value and so the Miner is willing to extend this
-service of delivery in exchange for the promise; by doing such, usage experience
+service of delivery in exchange for the promise; by doing such, usage experiences
 low latencies. Should the Helium LoRaWAN Network Server fail to fulfill its
 promise, the Miner would place the Helium LoRaWAN Network Server on a deny list
-and would no longer route packets from any devices from this Helium LoRaWAN
+and would no longer route packets from any devices to this Helium LoRaWAN
 Network Server.
