--- a/docs/use-the-network/console/debug.mdx
+++ b/docs/use-the-network/console/debug.mdx
@@ -84,7 +84,7 @@ includes a single hotspot.
 
 For uplink packets, a message similar to the one below will be shown. In
 addition to the original uplink message data, which starts at the very bottom,
-this message types will also show a message for each integration attached to the
+these packet types will also show a message for each integration attached to the
 device, so that you can examine what is being sent to those endpoints. For the
 message shown below, you can see there is a message for a **RequestBin** and
 **Cayenne** Integrations attached to this device. You can differentiate uplink
