--- a/docs/use-the-network/console/functions.mdx
+++ b/docs/use-the-network/console/functions.mdx
@@ -112,7 +112,7 @@ shown below.
 
 Once we have entered our decoder script, the last step is to optionally attach
 it to or create a new label. If you're not familiar with labels yet, you can
-learn about them here. You will likely want to attach your function to a device
+learn about them [here](/use-the-network/console/labels/). You will likely want to attach your function to a device
 or integration via Labels.
 
 There are two common ways in which labels are attached to functions, and thereby
