--- a/docs/use-the-network/console/integrations/adafruitio.mdx
+++ b/docs/use-the-network/console/integrations/adafruitio.mdx
@@ -61,7 +61,7 @@ which are auto populated when messages are actually sent, which are
 group topics to send device data to AdafruitIO over MQTT, you can read more
 about it [here](https://io.adafruit.com/api/docs/mqtt.html#group-topics).
 
-Next let's name the integration in step 3, you will use this name later to
+Next, let's name the integration in step 3. You will use this name to
 identify the integration when attaching it to devices.
 
 <img
