--- a/docs/use-the-network/console/integrations/http.mdx
+++ b/docs/use-the-network/console/integrations/http.mdx
@@ -69,7 +69,7 @@ View the details of your integration by clicking on the Integration name.
 integration, the name, the type of integration, and whether it is active or not.
 
 **HTTP Details** shows the specific endpoint. Editing endpoints is not available
-in the SDK Beta and will be coming soon. If you no longer want to use a
+in the SDK Beta and will be coming soon. If you no longer want to use an
 integration, simply create a new one and redirect existing devices using the old
 integration to use the new one.
 
@@ -100,7 +100,7 @@ page in the details section, an example is shown below.
   )}
 />
 
-The downlink URL can aslo be found in the uplink JSON message for that
+The downlink URL can also be found in the uplink JSON message for that
 particular device. It will look similar to the URL shown below. You can also
 find it using the Debug window on your device page.
 
@@ -132,7 +132,7 @@ following fields shown below, see more details on the fields
 
 ### Downlink Tool Example
 
-The easiest way to send a downlink to your device is to use the built in
+The easiest way to send a downlink to your device is to use the built-in
 downlink tool in Console. You will find it on the right side of every device
 page, as shown below. In order to use the downlink tool, you must have an HTTP
 integration attached to the device.
