--- a/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
+++ b/docs/use-the-network/console/integrations/mydevices-cayenne.mdx
@@ -116,8 +116,8 @@ Once the device starts reporting DigitalActuator or AnalogActuator, you will
 automatically get a button or a slider on Cayenne UI. Using that new control
 will then trigger downlink commands.
 
-Please note that both Actuators types inherit from AnalogSensor DataType, eg.
-using 2 bytes integers with 0.01 precision. This means a Digital Actuator set to
+Please note that both Actuators types inherit from AnalogSensor DataType, e.g.
+using 2-byte integers with 0.01 precision. This means a Digital Actuator set to
 HIGH from the UI will trigger a Downlink with the value = 0x0064 = 100.
 
 ### Device Data Payload Format
