--- a/docs/use-the-network/console/quickstart.mdx
+++ b/docs/use-the-network/console/quickstart.mdx
@@ -30,7 +30,7 @@ and click **Register**.
 During Registration, you'll be asked to provide an Organization name and a Team
 name.
 
-Define an Organization name for the top level owner of the account \(ie: company
+Define an Organization name for the top level owner of the account \(i.e. company
 name\). Think of Teams as a way to organize groups of devices.
 
 <img src={useBaseUrl("img/use-the-network/console/console-register.png")} />
@@ -89,14 +89,14 @@ Hotspot received the packet, its RSSI, and the size of the packet in bytes.
 ## Connecting Integrations to Devices
 
 Devices are connected to integrations through the use of Labels. Labels are
-named identifiers, that can be used to associate an integration with a device.
+named identifiers that can be used to associate an integration with a device.
 To connect one or more devices to one or more integrations, simply attach the
 same label to both the device and integration. Labels need to be created before
-attaching them to devices and integrations. Read more on this label link.
+attaching them to devices and integrations. Read more on labels [here](/use-the-network/console/labels).
 
 ## Next Steps
 
 Now that you have learned how to add a device on Console it's time to get an
 actual device connected. We have several quickstart guides for some of the most
-popular development and ready to use device
+popular development and ready to use devices
 [here](/use-the-network/devices).
