--- a/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
+++ b/docs/use-the-network/coverage-mapping/adeunis-mapper.mdx
@@ -118,7 +118,7 @@ Packet Count Screen
 
 Once you see a positive number in the UL Count field, you have successfully
 joined the network and are now transmitting packets with location data. At this
-point you are ready to begin mapping new area, read about how you can view your
+point you are ready to begin mapping new area. Read about how you can view your
 location live with Helium Cargo below! When you are finished, simply switch the
 power switch to OFF.
 
