--- a/docs/use-the-network/console/integrations/json-schema.mdx
+++ b/docs/use-the-network/console/integrations/json-schema.mdx
@@ -65,7 +65,7 @@ Here is an example of data received:
 
 | Field            | Type                              | Description                                                                                                                                                                                      |
 | :--------------- | :-------------------------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **app_eui**      | String                            | LoRaWAN 64-bit Application Identifier \(AppEUI\) in MSB hex; conventionally this is used to identify a type of sensor or actuator, eg: "temperature sensor" or "valve controller"                |
+| **app_eui**      | String                            | LoRaWAN 64-bit Application Identifier \(AppEUI\) in MSB hex; conventionally this is used to identify a type of sensor or actuator, e.g. "temperature sensor" or "valve controller"                |
 | **dev_eui**      | String                            | LoRaWAN 64-bit Device Identifier \(DevEUI\) in MSB hex; conventionally this is used to identify a unique device within a specific application \(AppEUI\) or even within an entire organization   |
 | **devaddr**      | String                            | Upon a successful Join, the device is allocated a LoRaWAN 64-bit DevAddr which is unique across the entire Helium Network as long the session is active; the data is represented here in MSB hex |
 | **fcnt**         | Number                            | LoRaWAN FCnt for uplink packets; this increments with every uplink packet and can be useful for surmising whether an uplink was missed                                                           |
@@ -73,7 +73,7 @@ Here is an example of data received:
 | **id**           | String                            | UUID used to identify the device within Helium Console; this is assigned during device creation and maps to a unique set of AppEui, DevEui, and AppKey                                           |
 | **metadata**     | Object\("label": Array\(label\)\) | A nested JSON object with a single field, "labels", which is an array of label Objects, described in the next table                                                                              |
 | **name**         | String                            | Name assigned to the device by Console user                                                                                                                                                      |
-| **payload**      | String                            | Data transmitted by your device as a base64 encoded String. Most computer languages will have some built-in libraries for parsing this \(eg: base64.decode\(payload\)\)                          |
+| **payload**      | String                            | Data transmitted by your device as a base64 encoded String. Most computer languages will have some built-in libraries for parsing this \(e.g. base64.decode\(payload\)\)                          |
 | **payload_size** | Number                            | Size of the payload in bytes; you can use this to verify your libraries parsing output                                                                                                           |
 | **port**         | Number                            | LoRaWAN FPort on which the data was transmitted; this can be useful for routing data within the application                                                                                      |
 
@@ -108,6 +108,6 @@ Here is an example of data received:
 
 | Type            | Description |                                                                                                                                                                         |
 | :-------------- | :---------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **payload_raw** | String      | Data transmitted to your device as a base64 encoded String. Most computer languages will have some built-in libraries for parsing this \(eg: base64.encode\(payload\)\) |
+| **payload_raw** | String      | Data transmitted to your device as a base64 encoded String. Most computer languages will have some built-in libraries for parsing this \(e.g. base64.encode\(payload\)\) |
 | **port**        | Number      | LoRaWAN FPort on which the data was transmitted; this can be useful for routing data within the application                                                             |
 | **confirmed**   | Bool        | Whether or not a device acknowledgement is required                                                                                                                     |
