--- a/docs/use-the-network/console/labels.mdx
+++ b/docs/use-the-network/console/labels.mdx
@@ -19,15 +19,15 @@ Devices can be both organized and connected to Integrations with the use of
 Labels. Labels are simply user defined identifiers, that can be attached to one
 or more devices, and one or more Integrations. Also multiple Labels can be added
 to a single device so users can choose to identify devices based on attributes
-such as geography \(e.g., SF\) and device type \(e.g., temperature or
-humidity\).
+such as geography \(e.g. `SF`\) and device type \(e.g. `temperature` or
+`humidity`\).
 
 Labels provide flexibility to define where to send data from devices. Users can
 apply a Label to an Integration and that Label can be used to connect a single
 or multiple devices to that Integration. For example, users could define an
 internal server as an Integration for initial testing and apply a descriptive
-Label \(e.g., internal_test\). After ensuring devices send data, that
-internal_test Label could easily be replaced by one that maps to a production
+Label \(e.g. `internal_test`\). After ensuring devices send data, that
+`internal_test` Label could easily be replaced by one that maps to a production
 endpoint \(AWS\).
 
 ## Add Labels
@@ -51,7 +51,7 @@ attachment dropdown to apply.
 
 ## Labels Settings
 
-Users can managed per-label settings across using the **Label Settings** button
+Users can managed per-label settings across devices and integrations using the **Label Settings** button
 in the top right corner when viewing an individual label. Only users with
 administrator-level privileges can change label settings.
 
@@ -59,8 +59,8 @@ administrator-level privileges can change label settings.
 
 ### General
 
-Under **General** settings, configured a label's name and its color as it
-appears on the left side of Dashboard.
+Under **General** settings, configure a label's name and its color as it
+appears on the left side of the Dashboard.
 
 ### Packet
 
@@ -86,7 +86,7 @@ to the Network by your Helium Console organization.
 Helium Console will deliver email-based notifications for various events that
 happen for devices in a given label. For each notification, either
 `Administrators`, `Managers`, or both can be notified via email. The current
-list of supported notifications are
+list of supported notifications are:
 
 - When a device is deleted from an organization
 - When an integration containing devices has been deleted
