--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -36,7 +36,7 @@ The Helium Community holds monthly video calls (led by the [DEWI](https://www.de
 
 #### Helium Hacks Happy Hour
 
-Held most weeks on Wednesdays at 3PM Pacific on Zoom, Helium Hacks Happy Hour (4H) is covers all things hardware, sensors, and connectivity. If you're building something on the Network and want to share, or simply want to learn, 4H is for you. 
+Held most weeks on Wednesdays at 3PM Pacific on Zoom, Helium Hacks Happy Hour (4H) covers all things hardware, sensors, and connectivity. If you're building something on the Network and want to share, or simply want to learn, 4H is for you. 
 
 * [Register for Helium Hacks Happy Hour](https://zoom.us/meeting/register/tJ0qdeyorDgqHdbWZTQhBSphsFEytiyc5BiP) 
 
