Add PlatformIO guide for Cubecell, ST-Disco, WisBlock, add images, move arduino images to sub dir for same 3 devices

--- a/docs/use-the-network/devices/development/st-b-l072z-lrwan1/st-b-l072z-lrwan1.mdx
+++ b/docs/use-the-network/devices/development/st-b-l072z-lrwan1/st-b-l072z-lrwan1.mdx
@@ -36,4 +36,5 @@ board, please see one of the guides below.
 
 ### Firmware Quickstart Guides
 
-[Arduino Guide](/use-the-network/devices/development/st-b-l072z-lrwan1/arduino)
+[Arduino Guide](/use-the-network/devices/development/st-b-l072z-lrwan1/arduino)  
+[PlatformIO Guide](/use-the-network/devices/development/st-b-l072z-lrwan1/platformio)
