--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -24,3 +24,4 @@ Find ready to use devices or learn how to develop your own. The Helium network s
 * [Adafruit Feather MO](/use-the-network/devices/development/adafruit-feather-m0-rfm95)
 * [Heltec Cubecell](/use-the-network/devices/development/heltec-cubecell-htcc-ab01)
 * [Heltec WiFi LoRa 32 V2](/use-the-network/devices/development/heltec-wifi-lora-32-v2)
+* [RAK Wireless WisBlock Starter](/use-the-network/devices/development/rak-wisblock-starter)
