--- a/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/heltec-cubecell-htcc-ab01.mdx
+++ b/docs/use-the-network/devices/development/heltec-cubecell-htcc-ab01/heltec-cubecell-htcc-ab01.mdx
@@ -27,4 +27,5 @@ The Heltec Cubecell HTCC AB01 is Heltec's popular ASR605x(ARM® Cortex® M0+ Cor
 
 ### Firmware Quickstart Guides
 
-[Arduino Guide](/use-the-network/devices/development/heltec-cubecell-htcc-ab01/arduino)
+* [Arduino Guide](/use-the-network/devices/development/heltec-cubecell-htcc-ab01/arduino)
+* [PlatformIO Guide](/use-the-network/devices/development/heltec-cubecell-htcc-ab01/platformio)
