ready for review

--- a/docs/mine-hnt/hotspot-makers/hotspot-makers.mdx
+++ b/docs/mine-hnt/hotspot-makers/hotspot-makers.mdx
@@ -15,6 +15,7 @@ Hotspot Manufacturers - commonly referred to as **Makers** - are hardware manufa
 * [Approved Makers](/mine-hnt/hotspot-makers/approved-makers)
 * [Maker Approval and Auditing](/mine-hnt/hotspot-makers/maker-approval-auditing)
 * [Hotspot Integration Testing](/mine-hnt/hotspot-makers/hotspot-integration-testing)
+* [Docker Integration](/mine-hnt/hotspot-makers/docker-integration)
 * [Hotspot BLE Services](/mine-hnt/hotspot-makers/hotspot-ble-services)
 * [Hotspot WiFi Configuration](/mine-hnt/hotspot-makers/hotspot-wifi-configuration)
 * [Burning HNT to your Maker Wallet](/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet)
