--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -35,7 +35,7 @@ To be a Helium Miner, there are three principle components to know about
   component is interested in receiving the packets relating to its devices and
   handles downlink responses when appropriate
 
-When you buy [a prebuilt Hotspot](/mine-hnt/prebuilt-hotspots), you are
+When you buy [an approved hotspot](https://www.helium.com/mine), you are
 buying a Packet Forwarder and a Miner in a convenient package. Everything is
 ready to go from the moment you plug it in and the device is kept up to date by
 Helium, Inc.
@@ -44,9 +44,9 @@ However, any device that can run an 8 channel LoRa front-end (such as SX1301 or
 SX1302) can be used to participate in the Helium Network. The Miner is designed
 to send and receive packets using the Semtech Gateways Messaging Protocol
 (GWMP), making it compatible with almost every LoRaWAN Gateway on the Market.
-[We have guides for several LoRaWAN Gateways](/mine-hnt/convert-lorawan-gateway)
-that work very well and using one of them gives you one less thing to worry
-about as the Packet Forwarder is setup and ready to go.
+Many off-the-shelf LoRaWAN gateways work very well and using one of them gives
+you one less thing to worry about as the Packet Forwarder is setup and ready to
+go.
 
 This guide, however, is for those that want a more hands-on experience. We will
 essentially be assembling a LoRaWAN gateway with discrete parts, loading up an
