--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -141,4 +141,4 @@ can also support NIST p-256 keys. And the Helium blockchain supports both key
 types.
 
 To learn more about existing wallet solutions, check out our
-[section on wallets](/wallets/wallets).
+[section on wallets](/wallets).
