--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -33,7 +33,7 @@ To be a Helium Miner, there are three principle components to know about
   component is interested in receiving the packets relating to its devices and
   handles downlink responses when appropriate
 
-When you buy [an approved hotspot](/mine-hnt/prebuilt-hotspots), you are
+When you buy [an approved hotspot](https://helium.com/mine), you are
 buying a Packet Forwarder and a Miner in a convenient package. Everything is
 ready to go from the moment you plug it in and the device is kept up to date by
 Helium, Inc.
