--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -9,20 +9,27 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Mine HNT
 
-Any Helium-enabled Hotspot (sometimes called a **miner** or **gateway**) can mine $HNT. Helium Hotspots were originally built by Helium, Inc. and our now handled by our growing ecosystem of approved manufacturers.
+Any Helium-enabled Hotspot (sometimes called a **miner** or **gateway**) can
+mine $HNT. Helium Hotspots were originally built by Helium, Inc. and our now
+handled by our growing ecosystem of approved manufacturers.
 
-### Hotspot Makers 
+### Hotspot Makers
 
-Interested in becoming a **Hotspots Maker**? Any qualified company can be approved by the Helium community to manufacture and distribute Hotspots. 
+Interested in becoming a **Hotspots Maker**? Any qualified company can be
+approved by the Helium community to manufacture and distribute Hotspots.
 
-* [Approved Makers](/mine-hnt/hotspot-makers/approved-makers)
-* [Maker Approval and Auditing](/mine-hnt/hotspot-makers/maker-approval-auditing)
-* [Hotspot Integration Testing](/mine-hnt/hotspot-makers/hotspot-integration-testing)
+- [Approved Makers](/mine-hnt/hotspot-makers/approved-makers)
+- [Maker Approval and Auditing](/mine-hnt/hotspot-makers/maker-approval-auditing)
+- [Hotspot Integration Testing](/mine-hnt/hotspot-makers/hotspot-integration-testing)
 
-### Approved Hotspots 
+### Approved Hotspots
 
-A full list of approved Hotspots with details on how to acquire them [can be found here](https://www.helium.com/mine).
+A full list of approved Hotspots with details on how to acquire them
+[can be found here](https://www.helium.com/mine).
 
 ### Build a Helium Packet Forwarder
 
-As of today, only approved Hotspots can participate in mining $HNT. However, any LoRaWAN Gateway can be converted to route packets to the Helium Network for development and production applications. [Start here](/mine-hnt/build-a-packet-forwarder).
+As of today, only approved Hotspots can participate in mining $HNT. However, any
+LoRaWAN Gateway can be converted to route packets to the Helium Network for
+development and production applications.
+[Start here](/mine-hnt/build-a-packet-forwarder).
