--- a/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
+++ b/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
@@ -7,7 +7,7 @@ slug: /mine-hnt/hotspot-makers/security-requirements
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Security Requirements
+## Security Requirements
 
 When the Helium Community passed
 [HIP19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md),
