--- a/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
+++ b/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
@@ -21,7 +21,7 @@ store the key during manufacturing. Other approaches are possible, but they
 would require case-by-case consideration and the potentially a third-party
 audit.
 
-# Securing the swarm_key with the ECC608
+## Securing the swarm_key with the ECC608
 
 Helium has open-sourced their ECC608 provisioning utility from their own
 manufacturing process [here](https://github.com/helium/gateway_mfr). By using
