--- a/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
+++ b/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
@@ -1,7 +1,7 @@
 ---
 id: security-requirements
 hide_title: true
-sidebar_label: Docker Integration
+sidebar_label: Security Requirements
 slug: /mine-hnt/hotspot-makers/security-requirements
 ---
 
