--- a/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
+++ b/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
@@ -104,7 +104,7 @@ docker exec provision gateway_mfr ecc test
 +--------------------+------+
 ```
 
-And finally, you will want to extra the `onboarding_key` which is also called
+And finally, you will want to extract the `onboarding_key` which is also called
 the Miner's "swarm_key":
 
 ```
