--- a/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
+++ b/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
@@ -11,7 +11,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 When the Helium Community passed
 [HIP19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md),
-is was made clear that open and easy access to the `swarm_key` is not permitted
+it was made clear that open and easy access to the `swarm_key` is not permitted
 at this time. This helps insure that the Miner is running on real hardware and
 increases the barriers to dishonest actors.
 
