--- a/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
+++ b/docs/mine-hnt/hotspot-makers/security-requirements/security-requirements.mdx
@@ -15,7 +15,7 @@ it was made clear that open and easy access to the `swarm_key` is not permitted
 at this time. This helps insure that the Miner is running on real hardware and
 increases the barriers to dishonest actors.
 
-```info
+:::info
 
 The `swarm_key` is an ECC Compact Key used by the Miner to sign all blockchain
 and libp2p transactions. The three word animal name (e.g. angry-purple-tiger) is actually
