--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -23,6 +23,10 @@ LoRaWAN Network. Achieving this distinguishes Helium’s LoRaWAN Network from an
 other: public wireless infrastructure is now compatible with privately-run
 network servers.
 
+The rest of this article will discuss the networking primitives. If you want to
+go ahead and run a network server, please checkout our article about [running
+a network server](/use-the-network/run-a-network-server).
+
 ## The OUI
 
 Each LoRaWAN Network Server (LNS) on the Helium Network acquires an
