--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -21,7 +21,7 @@ by the OUI operator:
 
 # OUI Cost
 
-The OUI is purchased with data credits (DCs) Costs are subject to change, but
+The OUI is purchased with data credits (DC). Costs are subject to change, but
 currently the OUI itself cost $100 worth of DCs and each NwkAddr cost an
 additional $100 in DC.
 
