--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -22,10 +22,10 @@ by the OUI operator:
 # OUI Cost
 
 The OUI is purchased with data credits (DC). Costs are subject to change, but
-currently the OUI itself cost $100 worth of DCs and each NwkAddr cost an
+currently the OUI itself costs $100 worth of DCs and each NwkAddr cost an
 additional $100 in DC.
 
-NwkAddr are sold in sequential blocks of any power of two between 8 and 65,536.
+NwkAddr are sold in sequential blocks between 8 and 65,536 and any power of two.
 You must purchase a slab when purchasing an OUI, therefore, the minimum cost for
 an OUI is $800 for 8 NwkAddr's and $100 for the OUI itself.
 
