--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -59,7 +59,7 @@ OUI=4
 SELF_HOSTED=true
 ENV_DOMAIN=localhost:4000
 AUTH_0_CLIENT_ID=NyfDZUfyT2thF7G56oazCsdGxO8GRZD6
-AUTH_0_DOMAIN=console.us.auth0.com
+AUTH_0_DOMAIN=router-dev.us.auth0.com
 AUTH0_BASE_URL=https://router-dev.us.auth0.com
 DATABASE_DB=console
 DATABASE_HOST=postgres
@@ -99,7 +99,7 @@ We will do something similar for `.env-router`:
 cp .env-router-template .env-router
 ```
 
-Then edit `.env`. Here's an example of what it should look like:
+Then edit `.env-router`. Here's an example of what it should look like:
 
 ```
 # Default Helium's seed nodes
