--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -35,3 +35,4 @@ Console is available as a free to use hosted application at
 * [CLI](/use-the-network/console/cli)
 * [API](/use-the-network/console/api)
 * [Account Security and API Keys](/use-the-network/console/my-account)
+* [Troubleshooting](/use-the-network/console/troubleshooting)
