Update for helium discord channel link
Said discorg.gg
Fixed to discord.gg

--- a/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/mine-hnt/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -13,7 +13,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 The ability to mine HNT with anything other than
 [Approved Hotspots](https://helium.com/mine) is not supported. Please join the
-#diy-packet-forwarder in the [Helium Discord Server](https://discorg.gg/helium)
+#diy-packet-forwarder in the [Helium Discord Server](https://discord.gg/helium)
 for the latest updates.
 
 :::
