--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -2,11 +2,25 @@
 id: requirements
 title: Validator Requirements
 hide_title: true
-sidebar_label: Requirements
+sidebar_label: Technical requirements
 slug: /mine-hnt/validators/requirements
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Validator Requirements
+# Technical Requirements
 
+Based on early tests, validator node requirements include:
+
+*  Hardware specs:
+    * CPU: Intel processor 3.0 GHz or above with 2 cores or equivalent
+    * Memory: 8 GB or above
+    * Storage: 256 GB or more 
+
+* If using a cloud provider (recommended) an AWS EC2 instance T2 large, xlarge or equivalent
+
+* Stable IP and few ports (currently 2154 and eventually port 443) open to internet
+
+* DNS resolvable URL strongly recommended
+
+* Running on stable network connections (without things like proxies, NAT, etc.), load is largely symmetrical when producing blocks, so good upstream recommended.
