--- a/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
+++ b/docs/use-the-network/run-a-network-server/buy-an-oui/buy-an-oui.mdx
@@ -44,7 +44,7 @@ and to have a bit over $900 in HNT.
 ## Create Data Credits
 
 Many fees benefit from
-[implicit burn](http://localhost:3000/blockchain/transaction-fees#transaction-fees-and-implicit-burn),
+[implicit burn](/blockchain/transaction-fees#transaction-fees-and-implicit-burn),
 but when paying for OUIs and DevAddr's, the Data Credits must be part of the
 purchasers balance.
 
