--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -27,7 +27,8 @@ Before pursuing this configuration though, it is worth considering.
 - If you are developing a few prototype devices, it might not be time to operate
   a network server. Helium operates [Console](/use-the-network/console) where
   you can easily manage devices for an organization without dealing with OUI
-  management.
+  management; you only pay for packets and new accounts start with a free 10,000
+  DC.
 
 - An OUI costs $900 in Data Credits at a minimum ($100 for the OUI and $800 for
   the smallest address slab), so if that cost if prohibitive, use the Helium
