--- a/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console/run-console.mdx
@@ -139,9 +139,10 @@ In `/config/releases.exs`, update your host from `example.com` to `localhost`.
 
 ### Run it!
 
-`docker-compose up` builds Console and launches it with two other containers: Router and
-Postgres. You might see `helium_router` crash a few times as it waits for
-`helium_console` to start up and allow the socket connection between the two.
+`docker-compose up` builds Console and launches it with two other containers:
+Router and Postgres. You might see `helium_router` crash a few times as it waits
+for `helium_console` to start up and allow the socket connection between the
+two.
 
 If you go to `localhost:4000`, you should have an auth0 login available to you.
 Just as a heads up, all of your important data is in the `data` in this
